--- a/chatgpt-api-application/pom.xml
+++ b/chatgpt-api-application/pom.xml
@@ -9,6 +9,23 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+    </dependency>
+        <dependency>
+            <groupId>cn.zhang.ai</groupId>
+            <artifactId>chatgpt-api-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <artifactId>chatgpt-api-application</artifactId>
 
     <properties>
