--- a/chatgpt-api-interfaces/pom.xml
+++ b/chatgpt-api-interfaces/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>chatgpt-api-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.zhang.ai</groupId>
+            <artifactId>chatgpt-api-application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
